# DTS_2026

./: README.md
dts_2026/: Makefile  README.md  pyproject.toml
dts_2026/docs/: mkdocs.yml
dts_2026/docs/docs/: index.md
dts_2026/dts_2026/: __init__.py  dataset.py  features.py  plots.py
dts_2026/dts_2026/modeling/: predict.py  train.py
