[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dts_2026"
version = "0.0.1"
description = "An DTS proyect to analize the UM db with properly and how it increases the risk and manage the oportunity to otorgate credits"
authors = [
  { name = "Lafin" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["dts_2026"]
include = ["pyproject.toml", "dts_2026/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dts_2026"]
force-sort-within-sections = true

